<resources>
    <string name="app_name">FarmEd Agriculture</string>
    <string name="myInformationHeader">My Information</string>
    <string name="farmName">Farm Name</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="phosphorous">Phosphorous</string>
    <string name="potassium">Pottasium</string>
    <string name="province">Province</string>
    <string name="division">Division</string>
    <string name="extent">Extent</string>
    <string name="carbon">Carbon</string>
    <string name="pH">pH</string>
    <string name="micronutrients">Micronutrients</string>
    <string name="soilTest">Soil Test</string>
    <string name="waterSource">Water Source</string>
    <string name="aggrozone">Aggrozone</string>
    <string name="animations">Show Animations</string>
    <string name="plants">Plants</string>
    <string name="bugs">Bugs and Diseases</string>
    <string name="advancedSearch">Advanced Search</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="between">Between</string>
    <string name="sendMessage">Send Message</string>
    <string name="replies">Replies</string>
    <string name="messageCentre">Messaging Centre</string>
    <string name="send">Send</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_replies">Replies</string>
    <string name="phosphate">Phosphate (P)</string>
    <string name="ph">pH</string>
    <string name="timeanddate">Time and Date</string>
    <string name="location">Location</string>
    <string name="usernum">user#</string>
    <string name="questionnum">Question #</string>
    <string name="enterquestion">Enter question here</string>
    <string name="submitquestion">Submit Question</string>
    <string name="loadanswers">Load Answers</string>
    <string name="selectImage">Select Image</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logIn">Log In</string>
    <string name="nError">Enter a value for Nitrogen (N)</string>
    <string name="kError">Enter a value for Potassium (P)</string>
    <string name="pError">Enter a value for Phosphorous (P)</string>
    <string name="pHError">Enter a value for pH</string>
    <string name="timeError">Enter a value for Time and Date</string>
    <string name="locationError">Enter a value for location</string>
    <string name="questionError">Enter a value for question</string>
    <string name="imageError">Please choose an image</string>
    <string name="usernameError">Username is incorrect or does not exist</string>
    <string name="passwordError">Password is incorrect</string>
    <string name="createAccount">Create Account</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="usernameCreateError">Username Already Exists</string>
    <string name="passwordCreateError">Passwords do not match</string>
    <string name="requestSuccess">Question Successfuly Submitted</string>
    <string name="title_activity_reply_page">ReplyPage</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="cropName">Crop Name</string>
    <string name="pesticidesHint">Pesticides Used</string>
    <string name="fertilisersHint">Fertilisers Used</string>
    <string name="frequencyHint">Frequency</string>
    <string name="lengthHint">Length</string>
    <string name="lengthError">Please enter the length of the issue</string>
    <string name="freqError">Please enter the frequency of the problem</string>
    <string name="fertError">Please enter fertiliser used</string>
    <string name="pestError">Please enter pesticides used</string>
    <string name="pinString">Pin Code</string>
    <string name="selectLanguage">Select Language</string>
    <string name="questionNumber">Question Number</string>
    <string name="question">Question</string>
    <string name="reply">Reply</string>
    <string name="wrongPin">Wrong Pin Code</string>
    <string name="usernameInUse">Username already in use</string>
    <string name="cropError">Please enter a value for Crop Name</string>
    <string name="myFarm">My Farm</string>
    <string name="crops">Crops</string>
    <string name="messaging">Messaging</string>
    <string name="pestsAndDiseases">Pests and Diseases</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="selectQuestion">Select Question</string>
    <string name="plantColours">Show Plant Suitability</string>
    <string name="logOut">Log Out</string>
    <string name="title_activity_individual_bug">IndividualBugActivity</string>
</resources>
