<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/userTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/heading"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/textWhite"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/myFarmButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/farmYellow"
        android:text="@string/myFarm"
        app:layout_constraintBottom_toTopOf="@+id/plantsButton"
        app:layout_constraintEnd_toStartOf="@+id/messagingButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTextView" />

    <Button
        android:id="@+id/messagingButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/chatPurple"
        android:text="@string/messaging"
        app:layout_constraintBottom_toTopOf="@+id/pestsAndDiseasesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myFarmButton"
        app:layout_constraintTop_toBottomOf="@+id/userTextView" />

    <Button
        android:id="@+id/plantsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/treeGreen"
        android:text="@string/plants"
        app:layout_constraintBottom_toTopOf="@+id/settingsButton"
        app:layout_constraintEnd_toStartOf="@+id/pestsAndDiseasesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myFarmButton" />

    <Button
        android:id="@+id/pestsAndDiseasesButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/statsRed"
        android:text="@string/pestsAndDiseases"
        app:layout_constraintBottom_toTopOf="@+id/repliesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plantsButton"
        app:layout_constraintTop_toBottomOf="@+id/messagingButton" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/settingsGrey"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/repliesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plantsButton" />

    <Button
        android:id="@+id/repliesButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/questionBlue"
        android:text="@string/replies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settingsButton"
        app:layout_constraintTop_toBottomOf="@+id/pestsAndDiseasesButton" />

</android.support.constraint.ConstraintLayout>