<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Messaging.MessagingActivity">

    <Button
        android:id="@+id/advancedSearchBugsButton3"
        android:layout_width="200dp"
        android:layout_height="71dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@color/heading"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.nightonke.boommenu.BoomMenuButton
        android:id="@+id/bmb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/heading"
        android:padding="10dp"
        android:text="@string/sendMessage"
        android:textAlignment="center"
        android:textColor="@color/textWhite"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/errorView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/selectBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/selectBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/background_button" />

            <EditText
                android:id="@+id/nTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/nitrogen"
                app:layout_constraintBottom_toTopOf="@+id/kTxt"
                app:layout_constraintEnd_toStartOf="@+id/pTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectBtn" />

            <EditText
                android:id="@+id/pTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/phosphorous"
                app:layout_constraintBottom_toTopOf="@+id/phTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nTxt"
                app:layout_constraintTop_toBottomOf="@+id/selectBtn" />

            <EditText
                android:id="@+id/kTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/potassium"
                app:layout_constraintBottom_toTopOf="@+id/cropTxt"
                app:layout_constraintEnd_toStartOf="@+id/phTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nTxt" />

            <EditText
                android:id="@+id/phTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/pH"
                app:layout_constraintBottom_toTopOf="@+id/locTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/kTxt"
                app:layout_constraintTop_toBottomOf="@+id/pTxt" />

            <EditText
                android:id="@+id/cropTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/cropName"
                app:layout_constraintBottom_toTopOf="@+id/pestTxt"
                app:layout_constraintEnd_toStartOf="@+id/locTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kTxt" />

            <EditText
                android:id="@+id/locTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/location"
                app:layout_constraintBottom_toTopOf="@+id/fertTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cropTxt"
                app:layout_constraintTop_toBottomOf="@+id/phTxt" />

            <EditText
                android:id="@+id/fertTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/fertilisersHint"
                app:layout_constraintBottom_toTopOf="@+id/lengthTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pestTxt"
                app:layout_constraintTop_toBottomOf="@+id/locTxt" />

            <EditText
                android:id="@+id/pestTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/pesticidesHint"
                app:layout_constraintBottom_toTopOf="@+id/frequencyTxt"
                app:layout_constraintEnd_toStartOf="@+id/fertTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cropTxt" />

            <EditText
                android:id="@+id/frequencyTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/frequencyHint"
                app:layout_constraintEnd_toStartOf="@+id/lengthTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pestTxt" />

            <EditText
                android:id="@+id/lengthTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/lengthHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/frequencyTxt"
                app:layout_constraintTop_toBottomOf="@+id/fertTxt" />

            <EditText
                android:id="@+id/questionTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frequencyTxt"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="255dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:background="@color/heading"
        android:text="@string/send"
        app:layout_constraintBottom_toTopOf="@+id/advancedSearchBugsButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/errorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView6" />

</android.support.constraint.ConstraintLayout>